--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
     "morgan": "~1.9.0",
+    "node-telegram-bot-api": "^0.30.0",
     "pug": "2.0.0-beta11"
   }
 }
