--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "mongoose": "^5.2.17",
     "morgan": "~1.9.0",
     "node-telegram-bot-api": "^0.30.0",
-    "pug": "2.0.0-beta11"
+    "pug": "2.0.0-beta11",
+    "shortid": "^2.2.13"
   }
 }
