--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "node ./bin/www",
-    "start:dev": "nodemon ./bin/www"
+    "start:dev": "nodemon ./bin/www",
+    "test":"mocha --exit --recursive"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -20,5 +21,10 @@
     "node-telegram-bot-api": "^0.30.0",
     "pug": "2.0.0-beta11",
     "shortid": "^2.2.13"
+  },
+  "devDependencies": {
+    "chai": "^4.2.0",
+    "chai-http": "^4.2.0",
+    "mocha": "^5.2.0"
   }
 }
