--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "start:dev": "nodemon ./bin/www",
-    "test":"mocha --exit --recursive"
+    "test":"mocha --exit --recursive --timeout 10000"
   },
   "dependencies": {
     "axios": "^0.18.0",
