--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "start": "node ./bin/www",
     "start:dev": "nodemon ./bin/www",
-    "test":"mocha --exit --recursive --timeout 10000"
+    "test": "mocha --exit --recursive --timeout 10000"
   },
   "dependencies": {
     "axios": "^0.18.0",
@@ -15,9 +15,11 @@
     "http-errors": "~1.6.2",
     "jsonwebtoken": "^8.3.0",
     "lodash": "^4.17.11",
+    "moment": "^2.23.0",
     "mongodb": "^3.1.6",
     "mongoose": "^5.2.17",
     "morgan": "~1.9.0",
+    "node-cron": "^2.0.3",
     "node-telegram-bot-api": "^0.30.0",
     "pug": "2.0.0-beta11",
     "shortid": "^2.2.13"
